hass/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: hass
  labels:
    kubernetes.io/service-name: hass
addressType: IPv4
ports:
  - name: http
    port: 8123
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.1.217
    conditions:
      ready: true
