hass/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      targetPort: 8123
