hass/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  tls:
  - hosts:
    - hass.jutonz.com
    secretName: hass-tls
  rules:
  - host: hass.jutonz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hass
            port:
              number: 8123
